--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@ integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLAS
           required 
           placeholder="input your score">
 
-          <button class="btn b-1 wd">submit</button>
+          <button class="btn b-1 wd" id="sumbitInput">submit</button>
         </form>
       </div>
     </div>
