--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@ integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLAS
       <div class="scores display">
         <div class="head mb-20">
           <h2>Recent Scores</h2>
-          <button type="button" class="b-1 btn  primary-button Refresh-page">Refresh</button>
+          <button type="button" class="b-1 btn  primary-button Refresh-page" id="Refresh-page">Refresh</button>
         </div>
             <ul class="ordered-score" id="score"></ul>
       </div>
