--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,9 @@ integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLAS
       <div class="scores display">
         <div class="head mb-20">
           <h2>Recent Scores</h2>
-          <button type="submit" class="b-1 btn  primary-button Refresh-page" id="Refresh">Refresh</button>
+          <button type="button" class="b-1 btn  primary-button Refresh-page" id="Refresh">Refresh</button>
         </div>
-            <ul class="ordered-score" id="score"></ul>
+            <ul class="ordered-score" id="scoreList"></ul>
       </div>
       <div class="inputs display column">
         <h2 class="mb-20">Add Your Score</h2>
@@ -31,14 +31,14 @@ integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLAS
 
           <input type="text"
            name="name"
-            id="name" 
+            id="clientName" 
             class="score-input p-1"
             required 
             placeholder="Input your name">
 
           <input type="number" 
           name="number" 
-          id="number" 
+          id="clientScore" 
           class="score p-1"
           min="0"
           required 
