Making more change to the api

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@ integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLAS
           <h2>Recent Scores</h2>
           <button type="button" class="b-1 btn  primary-button Refresh-page" id="Refresh">Refresh</button>
         </div>
-            <ul class="ordered-score" id="scoreList"></ul>
+            <ul class="ordered-score" id="scores"></ul>
       </div>
       <div class="inputs display column">
         <h2 class="mb-20">Add Your Score</h2>
